--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,53 @@
   --fundo-card
 */
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root{
+  --fundo-principal: #F5F5F5;
+  --texto: #222;
+  --texto-inverso: #FFF;
+  --destaque: #0077FF;
+  --destaque-inverso: #66BBFF;
+  --fundo-card: #FFF;
+}
+
 body{
-  background-color: lightgray;
-  color: darkblue;
+  font-family: Poppins, Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.5em;
+  background-color: var(--fundo-principal);
+  color: var(--texto);
+}
+
+header {
+  background-color: var(--destaque);
+  color: var(--texto);
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+}
+
+nav#menu ul{
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+
+nav#menu a{
+  text-decoration: none;
+  color: var(--texto-inverso);
+  font-weight: 600;
+  padding: 11px 15px;
+  border-radius: 5px;
+  transition: background-color .4s, color .4s;
+}
+
+nav#menu a:hover{
+  background-color: var(--destaque-inverso);
+  color: var(--destaque);
 }
